DTO: store route inside path item
