# swagger_server/models/path_item.py
@@ -1,6 +1,7 @@
 # coding: utf-8
 
 from __future__ import absolute_import
+from swagger_server.models.route import Route
 from swagger_server.models.route_point import RoutePoint
 from swagger_server.models.station import Station
 from .base_model_ import Model
@@ -14,14 +15,12 @@ class PathItem(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, agent_type: str=None, route_number: str=None, departure_station: Station=None, departure_time: str=None, arrival_station: Station=None, arrival_time: str=None, travel_time: str=None, periodicity: str=None, route_points: List[RoutePoint]=None):
+    def __init__(self, route: Route=None, departure_station: Station=None, departure_time: str=None, arrival_station: Station=None, arrival_time: str=None, travel_time: str=None, route_points: List[RoutePoint]=None):
         """
         PathItem - a model defined in Swagger
 
-        :param agent_type: The agent_type of this PathItem.
-        :type agent_type: str
-        :param route_number: The route_number of this PathItem.
-        :type route_number: str
+        :param route: The route of this PathItem.
+        :type route: Route
         :param departure_station: The departure_station of this PathItem.
         :type departure_station: Station
         :param departure_time: The departure_time of this PathItem.
@@ -32,43 +31,35 @@ class PathItem(Model):
         :type arrival_time: str
         :param travel_time: The travel_time of this PathItem.
         :type travel_time: str
-        :param periodicity: The periodicity of this PathItem.
-        :type periodicity: str
         :param route_points: The route_points of this PathItem.
         :type route_points: List[RoutePoint]
         """
         self.swagger_types = {
-            'agent_type': str,
-            'route_number': str,
+            'route': Route,
             'departure_station': Station,
             'departure_time': str,
             'arrival_station': Station,
             'arrival_time': str,
             'travel_time': str,
-            'periodicity': str,
             'route_points': List[RoutePoint]
         }
 
         self.attribute_map = {
-            'agent_type': 'agent_type',
-            'route_number': 'route_number',
+            'route': 'route',
             'departure_station': 'departure_station',
             'departure_time': 'departure_time',
             'arrival_station': 'arrival_station',
             'arrival_time': 'arrival_time',
             'travel_time': 'travel_time',
-            'periodicity': 'periodicity',
             'route_points': 'route_points'
         }
 
-        self._agent_type = agent_type
-        self._route_number = route_number
+        self._route = route
         self._departure_station = departure_station
         self._departure_time = departure_time
         self._arrival_station = arrival_station
         self._arrival_time = arrival_time
         self._travel_time = travel_time
-        self._periodicity = periodicity
         self._route_points = route_points
 
     @classmethod
@@ -84,46 +75,25 @@ class PathItem(Model):
         return deserialize_model(dikt, cls)
 
     @property
-    def agent_type(self) -> str:
+    def route(self) -> Route:
         """
-        Gets the agent_type of this PathItem.
+        Gets the route of this PathItem.
 
-        :return: The agent_type of this PathItem.
-        :rtype: str
+        :return: The route of this PathItem.
+        :rtype: Route
         """
-        return self._agent_type
+        return self._route
 
-    @agent_type.setter
-    def agent_type(self, agent_type: str):
+    @route.setter
+    def route(self, route: Route):
         """
-        Sets the agent_type of this PathItem.
+        Sets the route of this PathItem.
 
-        :param agent_type: The agent_type of this PathItem.
-        :type agent_type: str
-        """
-
-        self._agent_type = agent_type
-
-    @property
-    def route_number(self) -> str:
-        """
-        Gets the route_number of this PathItem.
-
-        :return: The route_number of this PathItem.
-        :rtype: str
-        """
-        return self._route_number
-
-    @route_number.setter
-    def route_number(self, route_number: str):
-        """
-        Sets the route_number of this PathItem.
-
-        :param route_number: The route_number of this PathItem.
-        :type route_number: str
+        :param route: The route of this PathItem.
+        :type route: Route
         """
 
-        self._route_number = route_number
+        self._route = route
 
     @property
     def departure_station(self) -> Station:
@@ -229,27 +199,6 @@ class PathItem(Model):
         """
 
         self._travel_time = travel_time
-
-    @property
-    def periodicity(self) -> str:
-        """
-        Gets the periodicity of this PathItem.
-
-        :return: The periodicity of this PathItem.
-        :rtype: str
-        """
-        return self._periodicity
-
-    @periodicity.setter
-    def periodicity(self, periodicity: str):
-        """
-        Sets the periodicity of this PathItem.
-
-        :param periodicity: The periodicity of this PathItem.
-        :type periodicity: str
-        """
-
-        self._periodicity = periodicity
 
     @property
     def route_points(self) -> List[RoutePoint]:
